--- a/theme.scss
+++ b/theme.scss
@@ -7,7 +7,7 @@ $CPThemeControlDefaultHoverBackground: darken($CPThemeControlDefaultBackgroundCo
 $CPThemeControlDefaultActiveBackground: darken($CPThemeControlDefaultBackgroundColor, 20%);
 $CPThemeControlDefaultBorderColor: #bdc3c7;
 $CPThemeControlDefaultBorderWidth: 1px;
-$CPThemeControlDefaultBorderRadius: 4px;
+$CPThemeControlDefaultBorderRadius: 0px;
 $CPThemeControlRoundedBorderRadius: 20px;
 
 // for first responders / default action controls
@@ -363,6 +363,39 @@ body {
 
     .menu-item-title, .menu-item-shortcut {
       color: $CPThemeControlHighlightedFontColor;
+    }
+  }
+}
+
+/* Tables */
+.table {
+  width: 400px;
+  margin:0;
+  padding:0;
+  border: $CPThemeControlDefaultBorderWidth solid $CPThemeControlDefaultBorderColor;
+  border-collapse: collapse;
+  thead {
+    background: $CPThemeControlDefaultBackgroundColor;
+    tr {
+      height: 25px;
+      th {
+        border-right: $CPThemeControlDefaultBorderWidth solid $CPThemeControlDefaultBorderColor;
+        border-bottom: $CPThemeControlDefaultBorderWidth solid $CPThemeControlDefaultBorderColor;
+        margin: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  tbody {
+    height: 100px;
+    overflow-y: auto;
+    tr {
+      width: 400px;
+      border-bottom: $CPThemeControlDefaultBorderWidth solid lighten($CPThemeControlDefaultBorderColor, 15%);
+      td {
+        border: 0;
+      }
     }
   }
 }
