--- a/theme.css
+++ b/theme.css
@@ -11,7 +11,7 @@ body {
   background: #ecf0f1;
   border: 1px solid #bdc3c7;
   height: 25px;
-  border-radius: 4px; }
+  border-radius: 0px; }
   .btn:hover {
     background: #cfd9db; }
   .btn:active {
@@ -63,16 +63,16 @@ body {
   background: #ecf0f1; }
 
 .seg-left {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   margin-right: 0; }
 
 .seg-middle {
   margin: 0 0; }
 
 .seg-right {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px; }
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px; }
 
 .seg-active {
   background: #3498db;
@@ -83,7 +83,7 @@ body {
 .slider-track {
   width: 200px;
   height: 6px;
-  border-radius: 4px;
+  border-radius: 0px;
   background: #b1c2c6; }
   .slider-track .slider-handle {
     width: 15px;
@@ -120,7 +120,7 @@ body {
   font-size: 13px;
   height: 25px;
   border: 1px solid #bdc3c7;
-  border-radius: 4px;
+  border-radius: 0px;
   padding-left: 2px;
   padding-right: 2px; }
 
@@ -143,12 +143,12 @@ body {
 
 .stepper-up {
   vertical-align: bottom;
-  border-top-right-radius: 4px;
+  border-top-right-radius: 0px;
   margin-bottom: 0; }
 
 .stepper-down {
   vertical-align: top;
-  border-bottom-right-radius: 4px; }
+  border-bottom-right-radius: 0px; }
 
 .input-rounded {
   border-radius: 20px;
@@ -162,8 +162,8 @@ body {
   background: #3498db;
   color: #ecf0f1;
   border: 1px solid #2980b9;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   /* Demo positioning */
   position: relative;
   top: -28px;
@@ -226,8 +226,8 @@ body {
   background: #fbfcfc;
   box-shadow: 3px 1px 10px #AAAAAA;
   border: 1px solid #bdc3c7;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
   left: 202px;
   width: 140px;
   height: 66px; }
@@ -249,5 +249,30 @@ body {
     border-top: 1px solid #2980b9; }
     .menu .menu-item-active .menu-item-title, .menu .menu-item-active .menu-item-shortcut {
       color: #ecf0f1; }
+
+/* Tables */
+.table {
+  width: 400px;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #bdc3c7;
+  border-collapse: collapse; }
+  .table thead {
+    background: #ecf0f1; }
+    .table thead tr {
+      height: 25px; }
+      .table thead tr th {
+        border-right: 1px solid #bdc3c7;
+        border-bottom: 1px solid #bdc3c7;
+        margin: 0;
+        padding: 0; }
+  .table tbody {
+    height: 100px;
+    overflow-y: auto; }
+    .table tbody tr {
+      width: 400px;
+      border-bottom: 1px solid #e6e9ea; }
+      .table tbody tr td {
+        border: 0; }
 
 /*# sourceMappingURL=theme.css.map */
