--- a/theme.scss
+++ b/theme.scss
@@ -133,7 +133,7 @@ body {
 .seg-right {
   border-top-right-radius: $CPThemeControlDefaultBorderRadius;
   border-bottom-right-radius: $CPThemeControlDefaultBorderRadius;
-  margin-right: 15px;
+  margin-left: -4px;
 }
 
 .seg-active {
